[gd_scene load_steps=10 format=2]

[ext_resource path="res://Test/Test.gd" type="Script" id=1]
[ext_resource path="res://Test/MapController.gd" type="Script" id=2]
[ext_resource path="res://Test/EventManager.gd" type="Script" id=3]
[ext_resource path="res://Items/Inventory.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Link/Link.tscn" type="PackedScene" id=5]
[ext_resource path="res://Camera/camera.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/StatusBar/StatusBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/ReadBox/ReadBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Audio/AudioManager/AudioManager.tscn" type="PackedScene" id=9]

[node name="Test" type="Node2D"]

script = ExtResource( 1 )

[node name="MapController" type="Node2D" parent="." index="0"]

script = ExtResource( 2 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="EventManager" type="Node2D" parent="." index="1"]

script = ExtResource( 3 )

[node name="Inventory" parent="." index="2" instance=ExtResource( 4 )]

pause_mode = 2
_sections_unfolded = [ "Pause", "Z Index" ]

[node name="Link" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 72, 120 )
_sections_unfolded = [ "Collision", "Pause", "Transform", "Z Index" ]

[node name="InputCD" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="camera" parent="." index="5" instance=ExtResource( 6 )]

[node name="UI" type="CanvasLayer" parent="." index="6"]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="StatusBar" parent="UI" index="0" instance=ExtResource( 7 )]

visible = false
_sections_unfolded = [ "Material", "Pause" ]

[node name="ReadBox" parent="UI" index="1" instance=ExtResource( 8 )]

pause_mode = 2
visible = false
_sections_unfolded = [ "Grow Direction", "Margin", "Pause" ]

[node name="CutScenePlaceHolder" type="CanvasLayer" parent="." index="7"]

pause_mode = 2
layer = 3
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Pause" ]

[node name="AudioManager" parent="." index="8" instance=ExtResource( 9 )]


